--- a/commons/src/main/res/layout/dialog_title.xml
+++ b/commons/src/main/res/layout/dialog_title.xml
@@ -9,4 +9,5 @@
     android:paddingRight="@dimen/activity_margin"
     android:paddingStart="@dimen/big_margin"
     android:paddingTop="@dimen/activity_margin"
-    android:textSize="@dimen/smaller_text_size"/>
+    android:textSize="@dimen/normal_text_size"
+    android:textStyle="bold"/>
