--- a/commons/src/main/res/layout/activity_license.xml
+++ b/commons/src/main/res/layout/activity_license.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical"
         android:padding="@dimen/activity_margin">
 
-        <TextView
+        <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/license_notice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
