--- a/commons/src/main/res/layout/dialog_title.xml
+++ b/commons/src/main/res/layout/dialog_title.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<com.simplemobiletools.commons.views.MyTextView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/dialog_title_textview"
     android:layout_width="wrap_content"
