--- a/commons/src/main/res/layout/dialog_whats_new.xml
+++ b/commons/src/main/res/layout/dialog_whats_new.xml
@@ -14,7 +14,7 @@
         android:paddingRight="@dimen/activity_margin"
         android:paddingTop="@dimen/activity_margin">
 
-        <TextView
+        <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/whats_new_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,7 +27,7 @@
             android:background="@drawable/divider"
             android:paddingTop="@dimen/activity_margin"/>
 
-        <TextView
+        <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/whats_new_disclaimer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
