adding some filepicker strings

--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -9,6 +9,8 @@
     <dimen name="social_logo">40dp</dimen>
     <dimen name="color_sample_size">30dp</dimen>
 
+    <dimen name="filepicker_list_icon_size">48dp</dimen>
+
     <dimen name="tiny_text_size">8sp</dimen>
     <dimen name="smaller_text_size">12sp</dimen>
     <dimen name="normal_text_size">14sp</dimen>
