--- a/commons/src/main/res/layout/property_item.xml
+++ b/commons/src/main/res/layout/property_item.xml
@@ -6,14 +6,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
+    <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/property_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_margin"
         android:textSize="@dimen/smaller_text_size"/>
 
-    <TextView
+    <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/property_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
