--- a/commons/src/main/res/layout/dialog_write_permission.xml
+++ b/commons/src/main/res/layout/dialog_write_permission.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="@dimen/activity_margin">
 
-    <TextView
+    <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/write_permissions_dialog_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
