rename a dialog text size

--- a/commons/src/main/res/layout/dialog_message.xml
+++ b/commons/src/main/res/layout/dialog_message.xml
@@ -8,4 +8,4 @@
     android:paddingLeft="@dimen/big_margin"
     android:paddingRight="@dimen/big_margin"
     android:paddingTop="@dimen/big_margin"
-    android:textSize="@dimen/dialog_text_size"/>
+    android:textSize="@dimen/bigger_text_size"/>
