--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -14,6 +14,6 @@
     <dimen name="tiny_text_size">8sp</dimen>
     <dimen name="smaller_text_size">12sp</dimen>
     <dimen name="normal_text_size">14sp</dimen>
-    <dimen name="dialog_text_size">16sp</dimen>
+    <dimen name="bigger_text_size">16sp</dimen>
     <dimen name="config_text_size">18sp</dimen>
 </resources>
