--- a/commons/src/main/res/values-sw600dp/dimens.xml
+++ b/commons/src/main/res/values-sw600dp/dimens.xml
@@ -3,5 +3,5 @@
     <dimen name="social_logo">50dp</dimen>
 
     <dimen name="normal_text_size">18sp</dimen>
-    <dimen name="config_text_size">22sp</dimen>
+    <dimen name="big_text_size">22sp</dimen>
 </resources>
