--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -15,5 +15,5 @@
     <dimen name="smaller_text_size">12sp</dimen>
     <dimen name="normal_text_size">14sp</dimen>
     <dimen name="bigger_text_size">16sp</dimen>
-    <dimen name="config_text_size">18sp</dimen>
+    <dimen name="big_text_size">18sp</dimen>
 </resources>
