--- a/commons/src/main/res/values/colors.xml
+++ b/commons/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="pressed_item_foreground">#08000000</color>
     <color name="activated_item_foreground">#44888888</color>
     <color name="divider_grey">#44cccccc</color>
+    <color name="gradient_grey_start">#AA000000</color>
 
     <!-- Color Customization -->
     <color name="default_text_color">#FF6D6D6D</color>
