--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <dimen name="normal_text_size">14sp</dimen>
     <dimen name="bigger_text_size">16sp</dimen>
     <dimen name="big_text_size">18sp</dimen>
+    <dimen name="actionbar_text_size">20sp</dimen>
 </resources>
