add a new dimen, bigger margin 20dp

--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="medium_margin">8dp</dimen>
     <dimen name="normal_margin">12dp</dimen>
     <dimen name="activity_margin">16dp</dimen>
+    <dimen name="bigger_margin">20dp</dimen>
     <dimen name="big_margin">24dp</dimen>
 
     <dimen name="social_logo">40dp</dimen>
