add a new, bigger text size

--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="bigger_text_size">16sp</dimen>
     <dimen name="big_text_size">18sp</dimen>
     <dimen name="actionbar_text_size">20sp</dimen>
+    <dimen name="extra_big_text_size">22sp</dimen>
 </resources>
