--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -9,6 +9,8 @@
 
     <dimen name="social_logo">40dp</dimen>
     <dimen name="color_sample_size">30dp</dimen>
+    <dimen name="colorpicker_size">240dp</dimen>
+    <dimen name="colorpicker_hue_width">30dp</dimen>
 
     <dimen name="filepicker_list_icon_size">48dp</dimen>
 
