--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="filepicker_list_icon_size">48dp</dimen>
 
     <dimen name="tiny_text_size">8sp</dimen>
+    <dimen name="small_text_size">10sp</dimen>
     <dimen name="smaller_text_size">12sp</dimen>
     <dimen name="normal_text_size">14sp</dimen>
     <dimen name="bigger_text_size">16sp</dimen>
