--- a/commons/src/main/res/layout/dialog_colorpicker.xml
+++ b/commons/src/main/res/layout/dialog_colorpicker.xml
@@ -1,100 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/color_picker_frame"
+    android:id="@+id/color_picker_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center">
+    android:layout_marginBottom="@dimen/activity_margin"
+    android:layout_marginTop="@dimen/activity_margin">
 
     <RelativeLayout
         android:id="@+id/color_picker_holder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:clipToPadding="false"
-        android:padding="@dimen/medium_margin">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <com.simplemobiletools.commons.views.ColorPickerSquare
-            android:id="@+id/color_picker_square"
-            android:layout_width="@dimen/colorpicker_size"
-            android:layout_height="@dimen/colorpicker_size"
-            android:layout_marginTop="@dimen/activity_margin"
-            android:layerType="software"/>
+        <RelativeLayout
+            android:id="@+id/color_picker_top_holder"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/colorpicker_size_with_padding"
+            android:gravity="center_horizontal">
 
-        <ImageView
-            android:id="@+id/color_picker_hue"
-            android:layout_width="@dimen/colorpicker_hue_width"
-            android:layout_height="@dimen/colorpicker_size"
-            android:layout_marginLeft="@dimen/medium_margin"
-            android:layout_marginTop="@dimen/activity_margin"
-            android:layout_toRightOf="@id/color_picker_square"
-            android:scaleType="fitXY"
-            android:src="@drawable/img_color_picker_hue"/>
+            <com.simplemobiletools.commons.views.ColorPickerSquare
+                android:id="@+id/color_picker_square"
+                android:layout_width="@dimen/colorpicker_size"
+                android:layout_height="@dimen/colorpicker_size"
+                android:layout_centerVertical="true"
+                android:layerType="software"/>
 
-        <ImageView
-            android:id="@+id/color_picker_hue_cursor"
-            android:layout_width="@dimen/activity_margin"
-            android:layout_height="@dimen/activity_margin"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_chevron_right"/>
+            <ImageView
+                android:id="@+id/color_picker_hue"
+                android:layout_width="@dimen/colorpicker_hue_width"
+                android:layout_height="@dimen/colorpicker_size"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/medium_margin"
+                android:layout_toRightOf="@id/color_picker_square"
+                android:scaleType="fitXY"
+                android:src="@drawable/img_color_picker_hue"/>
 
-        <ImageView
-            android:id="@+id/color_picker_cursor"
-            android:layout_width="@dimen/activity_margin"
-            android:layout_height="@dimen/activity_margin"
-            android:scaleType="fitCenter"
-            android:src="@drawable/color_picker_circle"/>
+            <ImageView
+                android:id="@+id/color_picker_hue_cursor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_chevron_right"/>
 
-        <LinearLayout
-            android:id="@+id/color_picker_bottom_holder"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/color_picker_cursor"
+                android:layout_width="@dimen/activity_margin"
+                android:layout_height="@dimen/activity_margin"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:src="@drawable/color_picker_circle"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/color_picker_hex_codes_holder"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/color_picker_square"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/medium_margin"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_below="@id/color_picker_top_holder">
 
-            <FrameLayout
-                android:layout_width="60dp"
-                android:layout_height="30dp">
+            <com.simplemobiletools.commons.views.MyTextView
+                android:id="@+id/color_picker_old_hex"
+                android:layout_width="@dimen/colorpicker_color_width"
+                android:layout_height="match_parent"
+                android:layout_alignBottom="@+id/color_picker_new_hex"
+                android:layout_alignTop="@+id/color_picker_new_hex"
+                android:layout_toLeftOf="@+id/color_picker_hex_arrow"
+                android:gravity="center"
+                android:textSize="@dimen/normal_text_size"/>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/tiled_background"/>
+            <ImageView
+                android:id="@+id/color_picker_hex_arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/colorpicker_items_height"
+                android:layout_alignBottom="@+id/color_picker_new_hex"
+                android:layout_alignTop="@+id/color_picker_new_hex"
+                android:layout_centerInParent="true"
+                android:paddingLeft="@dimen/medium_margin"
+                android:paddingRight="@dimen/medium_margin"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_arrow_right"/>
 
-                <ImageView
-                    android:id="@+id/color_picker_old_color"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/white"/>
-            </FrameLayout>
+            <com.simplemobiletools.commons.views.MyTextView
+                android:id="@+id/color_picker_new_hex_label"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/colorpicker_items_height"
+                android:layout_alignBottom="@+id/color_picker_new_hex"
+                android:layout_alignTop="@+id/color_picker_new_hex"
+                android:layout_toRightOf="@+id/color_picker_hex_arrow"
+                android:gravity="center"
+                android:text="#"
+                android:textSize="@dimen/normal_text_size"/>
+
+            <com.simplemobiletools.commons.views.MyEditText
+                android:id="@+id/color_picker_new_hex"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/color_picker_new_hex_label"
+                android:digits="0123456789ABCDEFabcdef"
+                android:ems="5"
+                android:gravity="start"
+                android:lines="1"
+                android:maxLength="6"
+                android:textSize="@dimen/normal_text_size"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/color_picker_bottom_holder"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/colorpicker_items_height"
+            android:layout_below="@id/color_picker_hex_codes_holder"
+            android:layout_marginBottom="@dimen/medium_margin"
+            android:layout_marginTop="@dimen/medium_margin">
+
+            <ImageView
+                android:id="@+id/color_picker_old_color"
+                android:layout_width="@dimen/colorpicker_color_width"
+                android:layout_height="match_parent"
+                android:layout_toLeftOf="@+id/color_picker_arrow"
+                android:background="@android:color/white"/>
 
             <ImageView
                 android:id="@+id/color_picker_arrow"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
                 android:paddingLeft="@dimen/medium_margin"
                 android:paddingRight="@dimen/medium_margin"
+                android:scaleType="centerInside"
                 android:src="@drawable/ic_arrow_right"/>
 
-            <FrameLayout
-                android:layout_width="60dp"
-                android:layout_height="30dp">
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/tiled_background"/>
-
-                <ImageView
-                    android:id="@+id/color_picker_new_color"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/white"/>
-            </FrameLayout>
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/color_picker_new_color"
+                android:layout_width="@dimen/colorpicker_color_width"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@+id/color_picker_arrow"
+                android:background="@android:color/white"/>
+        </RelativeLayout>
     </RelativeLayout>
-</FrameLayout>
+</ScrollView>
