--- a/commons/src/main/res/layout/dialog_colorpicker.xml
+++ b/commons/src/main/res/layout/dialog_colorpicker.xml
@@ -99,6 +99,7 @@
                 android:gravity="start"
                 android:lines="1"
                 android:maxLength="6"
+                android:textCursorDrawable="@null"
                 android:textSize="@dimen/normal_text_size"/>
 
         </RelativeLayout>
