make sure the old hex code is properly centered vertically

--- a/commons/src/main/res/layout/dialog_color_picker.xml
+++ b/commons/src/main/res/layout/dialog_color_picker.xml
@@ -60,8 +60,7 @@
                 android:id="@+id/color_picker_old_hex"
                 android:layout_width="@dimen/colorpicker_color_width"
                 android:layout_height="match_parent"
-                android:layout_alignBottom="@+id/color_picker_new_hex"
-                android:layout_alignTop="@+id/color_picker_new_hex"
+                android:layout_centerInParent="true"
                 android:layout_toLeftOf="@+id/color_picker_hex_arrow"
                 android:gravity="center"
                 android:textSize="@dimen/normal_text_size"/>
