--- a/commons/src/main/res/values/styles.xml
+++ b/commons/src/main/res/values/styles.xml
@@ -32,7 +32,9 @@
         <item name="android:textSize">@dimen/actionbar_text_size</item>
     </style>
 
-    <style name="SpinnerItem" parent="@android:style/Widget.TextView"/>
+    <style name="SpinnerItem" parent="@android:style/Widget.TextView">
+        <item name="android:paddingRight">@dimen/activity_margin</item>
+    </style>
 
     <style name="SpinnerItem.DropDownItem" parent="@android:style/Widget.TextView">
         <item name="android:gravity">center_vertical</item>
