--- a/commons/src/main/res/values-sw600dp/dimens.xml
+++ b/commons/src/main/res/values-sw600dp/dimens.xml
@@ -1,6 +1,8 @@
 <resources>
     <dimen name="medium_margin">12dp</dimen>
     <dimen name="social_logo">50dp</dimen>
+    <dimen name="colorpicker_color_width">80dp</dimen>
+    <dimen name="colorpicker_items_height">40dp</dimen>
 
     <dimen name="normal_text_size">18sp</dimen>
     <dimen name="big_text_size">22sp</dimen>
