increase tiny text size on tablets

--- a/commons/src/main/res/values-sw600dp/dimens.xml
+++ b/commons/src/main/res/values-sw600dp/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
+    <dimen name="tiny_margin">4dp</dimen>
     <dimen name="medium_margin">12dp</dimen>
     <dimen name="social_logo">50dp</dimen>
     <dimen name="colorpicker_color_width">80dp</dimen>
