--- a/commons/src/main/res/drawable/divider.xml
+++ b/commons/src/main/res/drawable/divider.xml
@@ -6,6 +6,6 @@
         android:width="1dp"
         android:height="1dp"/>
 
-    <solid android:color="@color/divider_grey"/>
+    <solid android:color="@color/divider_weak"/>
 
 </shape>
