--- a/commons/src/main/res/values/colors.xml
+++ b/commons/src/main/res/values/colors.xml
@@ -6,7 +6,8 @@
 
     <color name="pressed_item_foreground">#08000000</color>
     <color name="activated_item_foreground">#44888888</color>
-    <color name="divider_grey">#88cccccc</color>
+    <color name="divider_weak">#44cccccc</color>
+    <color name="divider_strong">#88cccccc</color>
     <color name="gradient_grey_start">#AA000000</color>
 
     <!-- Color Customization -->
