--- a/commons/src/main/res/values/styles.xml
+++ b/commons/src/main/res/values/styles.xml
@@ -60,4 +60,8 @@
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:colorBackground">@color/default_background_color_dark_theme</item>
     </style>
+
+    <style name="MyBorderlessBackgroundStyle">
+        <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
 </resources>
