--- a/commons/src/main/res/layout/dialog_rename_item.xml
+++ b/commons/src/main/res/layout/dialog_rename_item.xml
@@ -1,19 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rename_folder_holder"
+    android:id="@+id/rename_item_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_margin">
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/folder_path"
+        android:id="@+id/rename_item_path"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/folder_name"
+        android:id="@+id/rename_item_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_margin"
+        android:singleLine="true"
+        android:textCursorDrawable="@null"/>
+
+    <com.simplemobiletools.commons.views.MyTextView
+        android:id="@+id/rename_item_extension_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/extension"/>
+
+    <com.simplemobiletools.commons.views.MyEditText
+        android:id="@+id/rename_item_extension"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
