--- a/commons/src/main/res/layout/breadcrumb_item.xml
+++ b/commons/src/main/res/layout/breadcrumb_item.xml
@@ -3,4 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/breadcrumb_text"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/tiny_margin"
+    android:paddingTop="@dimen/tiny_margin"/>
