add some FastScroller related things

--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -16,6 +16,8 @@
     <dimen name="colorpicker_color_width">70dp</dimen>
 
     <dimen name="filepicker_list_icon_size">48dp</dimen>
+    <dimen name="fastscroll_width">6dp</dimen>
+    <dimen name="fastscroll_height">40dp</dimen>
 
     <dimen name="tiny_text_size">8sp</dimen>
     <dimen name="small_text_size">10sp</dimen>
