--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -15,7 +15,7 @@
     <dimen name="colorpicker_items_height">30dp</dimen>
     <dimen name="colorpicker_color_width">70dp</dimen>
 
-    <dimen name="filepicker_list_icon_size">48dp</dimen>
+    <dimen name="normal_icon_size">48dp</dimen>
     <dimen name="fastscroll_width">6dp</dimen>
     <dimen name="fastscroll_height">40dp</dimen>
 
