--- a/commons/src/main/res/layout/dialog_radio_group.xml
+++ b/commons/src/main/res/layout/dialog_radio_group.xml
@@ -9,5 +9,9 @@
         android:id="@+id/dialog_radio_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/activity_margin"/>
+        android:paddingBottom="@dimen/normal_margin"
+        android:paddingLeft="@dimen/activity_margin"
+        android:paddingRight="@dimen/activity_margin"
+        android:paddingTop="@dimen/normal_margin"/>
+
 </ScrollView>
