--- a/commons/src/main/res/values/colors.xml
+++ b/commons/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="default_light_theme_background_color">#FFFAFAFA</color>
     <color name="default_dark_theme_text_color">#FFEDEDED</color>
     <color name="default_dark_theme_background_color">#FF3F3F3F</color>
+    <color name="default_text_color">@color/default_light_theme_text_color</color>
+    <color name="default_background_color">@color/default_light_theme_background_color</color>
 
     <!-- SwitchCompat -->
     <color name="thumb_deactivated">#FFECECEC</color>
