expand the SD card permission dialog with another text

--- a/commons/src/main/res/layout/dialog_write_permission.xml
+++ b/commons/src/main/res/layout/dialog_write_permission.xml
@@ -22,4 +22,11 @@
         android:scaleType="fitCenter"
         android:src="@drawable/img_write_storage"/>
 
+    <com.simplemobiletools.commons.views.MyTextView
+        android:id="@+id/write_permissions_dialog_text_sd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_margin"
+        android:text="@string/confirm_storage_access_text_sd"/>
+
 </LinearLayout>
