--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -19,6 +19,8 @@
     <dimen name="fastscroll_width">6dp</dimen>
     <dimen name="fastscroll_height">40dp</dimen>
 
+    <dimen name="dragselect_hotspot_height">56dp</dimen>
+
     <dimen name="tiny_text_size">8sp</dimen>
     <dimen name="small_text_size">10sp</dimen>
     <dimen name="smaller_text_size">12sp</dimen>
