--- a/commons/src/main/res/layout/filepicker_list_item.xml
+++ b/commons/src/main/res/layout/filepicker_list_item.xml
@@ -12,8 +12,7 @@
         android:id="@+id/list_item_icon"
         android:layout_width="@dimen/normal_icon_size"
         android:layout_height="@dimen/normal_icon_size"
-        android:paddingBottom="@dimen/medium_margin"
-        android:paddingTop="@dimen/medium_margin"
+        android:padding="@dimen/medium_margin"
         android:src="@drawable/ic_folder"/>
 
     <com.simplemobiletools.commons.views.MyTextView
