--- a/commons/src/main/res/layout/filepicker_list_item.xml
+++ b/commons/src/main/res/layout/filepicker_list_item.xml
@@ -12,33 +12,33 @@
         android:id="@+id/list_item_icon"
         android:layout_width="@dimen/normal_icon_size"
         android:layout_height="@dimen/normal_icon_size"
+        android:layout_centerVertical="true"
         android:padding="@dimen/medium_margin"
         android:src="@drawable/ic_folder"/>
 
-    <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/list_item_name"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/list_item_icon"
+        android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/list_item_icon"
         android:layout_toRightOf="@+id/list_item_icon"
-        android:ellipsize="end"
-        android:maxLines="3"
-        android:paddingLeft="@dimen/small_margin"
-        android:paddingStart="@dimen/small_margin"
-        android:paddingTop="@dimen/small_margin"
-        android:text="Directory"/>
+        android:padding="@dimen/small_margin">
 
-    <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/list_item_details"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/list_item_name"
-        android:layout_toEndOf="@+id/list_item_icon"
-        android:layout_toRightOf="@+id/list_item_icon"
-        android:paddingLeft="@dimen/small_margin"
-        android:paddingStart="@dimen/small_margin"
-        android:text="1 KB"
-        android:textSize="@dimen/smaller_text_size"/>
+        <com.simplemobiletools.commons.views.MyTextView
+            android:id="@+id/list_item_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:text="Directory"/>
+
+        <com.simplemobiletools.commons.views.MyTextView
+            android:id="@+id/list_item_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/list_item_name"
+            android:text="1 KB"
+            android:textSize="@dimen/smaller_text_size"/>
+    </RelativeLayout>
 
 </RelativeLayout>
