--- a/commons/src/main/res/layout/breadcrumb_item.xml
+++ b/commons/src/main/res/layout/breadcrumb_item.xml
@@ -4,5 +4,7 @@
     android:id="@+id/breadcrumb_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/tiny_margin"
-    android:paddingTop="@dimen/tiny_margin"/>
+    android:paddingBottom="@dimen/medium_margin"
+    android:paddingLeft="@dimen/small_margin"
+    android:paddingRight="@dimen/small_margin"
+    android:paddingTop="@dimen/medium_margin"/>
