--- a/commons/src/main/res/layout/dialog_filepicker.xml
+++ b/commons/src/main/res/layout/dialog_filepicker.xml
@@ -16,7 +16,10 @@
             android:id="@+id/filepicker_breadcrumbs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/activity_margin"/>
+            android:paddingBottom="@dimen/medium_margin"
+            android:paddingLeft="@dimen/activity_margin"
+            android:paddingRight="@dimen/activity_margin"
+            android:paddingTop="@dimen/activity_margin"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/filepicker_list"
