add a Donate button to the donate prompt dialog

--- a/commons/src/main/res/values/donottranslate.xml
+++ b/commons/src/main/res/values/donottranslate.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="progress">%1$s / %2$s</string>
     <string name="empty"> </string>
+    <string name="donate_url">http://simplemobiletools.com/donate</string>
 
     <!-- About -->
     <string name="two_string_placeholder">%1$s%2$s</string>
