--- a/commons/src/main/res/values/styles.xml
+++ b/commons/src/main/res/values/styles.xml
@@ -64,4 +64,15 @@
     <style name="MyBorderlessBackgroundStyle">
         <item name="android:background">?attr/selectableItemBackground</item>
     </style>
+
+    <style name="PinNumberStyle.Base">
+        <item name="android:gravity">center</item>
+        <item name="android:padding">@dimen/small_margin</item>
+        <item name="android:textSize">@dimen/big_text_size</item>
+    </style>
+
+    <style name="PinNumberStyle" parent="PinNumberStyle.Base">
+        <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
+
 </resources>
