--- a/commons/src/main/res/layout/dialog_create_new_folder.xml
+++ b/commons/src/main/res/layout/dialog_create_new_folder.xml
@@ -9,6 +9,11 @@
     android:paddingRight="@dimen/activity_margin"
     android:paddingTop="@dimen/activity_margin">
 
+    <com.simplemobiletools.commons.views.MyTextView
+        android:id="@+id/folder_path"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <com.simplemobiletools.commons.views.MyEditText
         android:id="@+id/folder_name"
         android:layout_width="match_parent"
