--- a/commons/src/main/res/layout/dialog_security.xml
+++ b/commons/src/main/res/layout/dialog_security.xml
@@ -22,6 +22,12 @@
             android:layout_height="wrap_content"
             android:text="@string/pin"/>
 
+        <android.support.design.widget.TabItem
+            android:id="@+id/dialog_tab_fingerprint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/fingerprint"/>
+
     </android.support.design.widget.TabLayout>
 
     <com.simplemobiletools.commons.views.MyDialogViewPager
