--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
     <dimen name="normal_icon_size">48dp</dimen>
     <dimen name="fastscroll_width">8dp</dimen>
     <dimen name="fastscroll_height">40dp</dimen>
+    <dimen name="fingerprint_icon_size">72dp</dimen>
 
     <dimen name="dragselect_hotspot_height">56dp</dimen>
 
