--- a/commons/src/main/res/layout/tab_fingerprint.xml
+++ b/commons/src/main/res/layout/tab_fingerprint.xml
@@ -13,12 +13,24 @@
         android:text="@string/add_fingerprint"/>
 
     <ImageView
-        android:id="@+id/finterprint_image"
+        android:id="@+id/fingerprint_image"
         android:layout_width="@dimen/fingerprint_icon_size"
         android:layout_height="@dimen/fingerprint_icon_size"
         android:layout_below="@+id/fingerprint_lock_title"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/activity_margin"
         android:src="@drawable/ic_fingerprint"/>
+
+    <com.simplemobiletools.commons.views.MyTextView
+        android:id="@+id/fingerprint_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/fingerprint_image"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="@dimen/activity_margin"
+        android:layout_marginRight="@dimen/activity_margin"
+        android:gravity="center"
+        android:padding="@dimen/activity_margin"
+        android:text="@string/place_finger"/>
 
 </com.simplemobiletools.commons.views.FingerprintTab>
