--- a/commons/src/main/res/layout/tab_fingerprint.xml
+++ b/commons/src/main/res/layout/tab_fingerprint.xml
@@ -33,4 +33,14 @@
         android:padding="@dimen/activity_margin"
         android:text="@string/place_finger"/>
 
+    <com.simplemobiletools.commons.views.MyTextView
+        android:id="@+id/fingerprint_settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/fingerprint_label"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/breadcrumb_gradient"
+        android:padding="@dimen/normal_margin"
+        android:text="@string/go_to_settings"/>
+
 </com.simplemobiletools.commons.views.FingerprintTab>
