try getting file Last Modified in properties from mediastore

--- a/commons/src/main/res/values/ids.xml
+++ b/commons/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="properties_size" type="id"/>
     <item name="properties_file_count" type="id"/>
+    <item name="properties_last_modified" type="id"/>
 </resources>
