add a tablet version of extra_big_text_size

--- a/commons/src/main/res/values-sw600dp/dimens.xml
+++ b/commons/src/main/res/values-sw600dp/dimens.xml
@@ -7,4 +7,5 @@
 
     <dimen name="normal_text_size">18sp</dimen>
     <dimen name="big_text_size">22sp</dimen>
+    <dimen name="extra_big_text_size">26sp</dimen>
 </resources>
