--- a/commons/src/main/res/layout/dialog_donate.xml
+++ b/commons/src/main/res/layout/dialog_donate.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.simplemobiletools.commons.views.MyTextView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/whats_new_disclaimer"
+    android:id="@+id/donate"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:autoLink="web"
     android:paddingLeft="@dimen/activity_margin"
     android:paddingRight="@dimen/activity_margin"
     android:paddingTop="@dimen/activity_margin"
