adding some resources related to selection circle

--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -21,6 +21,7 @@
     <dimen name="fingerprint_icon_size">72dp</dimen>
 
     <dimen name="dragselect_hotspot_height">56dp</dimen>
+    <dimen name="selection_check_size">26dp</dimen>
 
     <dimen name="tiny_text_size">8sp</dimen>
     <dimen name="small_text_size">10sp</dimen>
