adding a LineColorPicker view

--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -23,6 +23,8 @@
     <dimen name="dragselect_hotspot_height">56dp</dimen>
     <dimen name="selection_check_size">26dp</dimen>
     <dimen name="widget_colorpicker_size">50dp</dimen>
+    <dimen name="line_color_picker_height">80dp</dimen>
+    <dimen name="line_color_picker_margin">10dp</dimen>
 
     <dimen name="tiny_text_size">8sp</dimen>
     <dimen name="small_text_size">10sp</dimen>
